# exparso

./: .gitattributes  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  integrate.yml  lint.yml  test.yml
argo/: index.html
changelog/: index.html
contributing/: index.html
docs/: argo.md  changelog.md  contributing.md  eval-dataset.md  eval-method.md  eval-result.md  index.md  prompts.md
eval/: __main__.py  settings.py
eval-dataset/: index.html
eval-method/: index.html
eval-result/: index.html
eval/impl/: __init__.py  cache_repository.py  figure.py  gcs_helper.py  llm.py  parser.py
eval/models/: __init__.py
eval/usecase/: __init__.py  evaluator.py
exparso/core/: parse_core_service.py  type.py
exparso/core/parse/: parse_document.py
exparso/llm/: claude.py  gemini.py  openai.py
exparso/loader/: docx_loader.py  pptx_loader.py
exparso/model/: page_loader.py
prompts/: index.html
search/: search_index.json
tests/: constants.py
tests/data/: test.csv  test.docx  test.md  test.pptx  test.xlsx
tests/integrate/: conftest.py  test_error.py  test_model_aoai.py  test_model_claude.py  test_model_gemini.py  test_model_none.py
tests/integrate/core/: conftest.py  test_docs_type.py  test_parse_document.py  test_update_context.py
tests/integrate/llm/: conftest.py  test_claude.py  test_gemini.py  test_openai.py
tests/integrate/loader/: test_docx_loader.py  test_pptx_loader.py
tests/unit/core/prompt/: test_prompt.py
tests/unit/llm/: test_llm_factory.py
tests/unit/loader/: test_csv_loader.py  test_image_loader.py  test_pdf_loader.py  test_text_file_loader.py  test_xlsx_loader.py
tests/unit/model/: test_document.py  test_llm_model.py
